--- a/mrnaseq_example/count.ipynb
+++ b/mrnaseq_example/count.ipynb
@@ -9,12 +9,12 @@
    "source": [
     "# comparing the number of reads mapped to exon junctions using subread and STAR\n",
     "# idk why there is a such a huge difference\n",
-    "# for now, I'm just going to go with STAR"
+    "# for now, I'm just going to go with STAR bc it is the most conservative when i comes to mapping reads"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "906a2bca",
    "metadata": {},
    "outputs": [
@@ -22,13 +22,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "872\n"
+      "678\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
-    "with open('testing/Subread_testing/subread.results.82.txt.jcounts') as file:\n",
+    "with open('testing/Subread_testing/fc_results/counts.STAR.jcounts') as file:\n",
     "    for line in file:\n",
     "        line = line.split('\\t') \n",
     "        count_str = line[8].rstrip()\n",
@@ -41,7 +41,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
+   "id": "12fc7a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "932\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input was a .fastq file\n",
+    "count = 0\n",
+    "with open('testing/Subread_testing/sj_results/subjunc.bam.junction.bed') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t')\n",
+    "        try:\n",
+    "            count_int = int(line[4])\n",
+    "        except IndexError: continue\n",
+    "        count += count_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f87e085f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "488\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input was a .bam file from STAR\n",
+    "count = 0\n",
+    "with open('testing/Subread_testing/sj_results/subjunc.star.bam.junction.bed') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t')\n",
+    "        try:\n",
+    "            count_int = int(line[4])\n",
+    "        except IndexError: continue\n",
+    "        count += count_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a6ca4cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "887\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input was a .sam file from HISAT2\n",
+    "count = 0\n",
+    "with open('testing/Subread_testing/sj_results/subjunc.hisat2.bam.junction.bed') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t')\n",
+    "        try:\n",
+    "            count_int = int(line[4])\n",
+    "        except IndexError: continue\n",
+    "        count += count_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2ea42a4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "932\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input was a .bam file from subjunc (subread)\n",
+    "count = 0\n",
+    "with open('testing/Subread_testing/sj_results/subjunc.subread.bam.junction.bed') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t')\n",
+    "        try:\n",
+    "            count_int = int(line[4])\n",
+    "        except IndexError: continue\n",
+    "        count += count_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "a7e4fb9a",
    "metadata": {},
    "outputs": [
@@ -66,32 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f87e085f",
+   "execution_count": null,
+   "id": "9910c5b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "488\n"
-     ]
-    }
-   ],
-   "source": [
-    "# this bed file was made with the bam file created by STAR (pretty sure, maybe run it again later)\n",
-    "count = 0\n",
-    "with open('testing/Subread_testing/subjunc_results.bam.junction.bed') as file:\n",
-    "    for line in file:\n",
-    "        line = line.split('\\t')\n",
-    "        try:\n",
-    "            count_int = int(line[4])\n",
-    "        except IndexError: continue\n",
-    "        count += count_int\n",
-    "print(count)\n",
-    "\n",
-    "# it's different again lol"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
