--- a/mrnaseq_example/count.ipynb
+++ b/mrnaseq_example/count.ipynb
@@ -14,35 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "906a2bca",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "678\n"
-     ]
-    }
-   ],
-   "source": [
-    "count = 0\n",
-    "with open('testing/Subread_testing/fc_results/counts.STAR.jcounts') as file:\n",
-    "    for line in file:\n",
-    "        line = line.split('\\t') \n",
-    "        count_str = line[8].rstrip()\n",
-    "        try:\n",
-    "            count_int = int(count_str)\n",
-    "        except ValueError: continue\n",
-    "        count += count_int\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "12fc7a97",
+   "execution_count": 7,
+   "id": "406adaf0",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +29,7 @@
    "source": [
     "# input was a .fastq file\n",
     "count = 0\n",
-    "with open('testing/Subread_testing/sj_results/subjunc.bam.junction.bed') as file:\n",
+    "with open('testing/Subread_testing/sj_results/subjunc_results.bam.junction.bed') as file:\n",
     "    for line in file:\n",
     "        line = line.split('\\t')\n",
     "        try:\n",
@@ -69,6 +42,89 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "c9574176",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input was a bam file from subread-align\n",
+    "count = 0\n",
+    "with open('testing/Subread_testing/fc_results/counts.jcounts') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t') \n",
+    "        count_str = line[8].rstrip()\n",
+    "        try:\n",
+    "            count_int = int(count_str)\n",
+    "        except ValueError: continue\n",
+    "        count += count_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "906a2bca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "678\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input was a sorted .bam file from STAR\n",
+    "count = 0\n",
+    "with open('testing/Subread_testing/fc_results/star.counts.jcounts') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t') \n",
+    "        count_str = line[8].rstrip()\n",
+    "        try:\n",
+    "            count_int = int(count_str)\n",
+    "        except ValueError: continue\n",
+    "        count += count_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "07269e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "932\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input was a .bam file from subread-align\n",
+    "count = 0\n",
+    "with open('testing/Subread_testing/sj_results/sr_align_results.bam.junction.bed') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t')\n",
+    "        try:\n",
+    "            count_int = int(line[4])\n",
+    "        except IndexError: continue\n",
+    "        count += count_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "f87e085f",
    "metadata": {},
    "outputs": [
@@ -81,9 +137,9 @@
     }
    ],
    "source": [
-    "# input was a .bam file from STAR\n",
+    "# input was a sorted .bam file from STAR\n",
     "count = 0\n",
-    "with open('testing/Subread_testing/sj_results/subjunc.star.bam.junction.bed') as file:\n",
+    "with open('testing/Subread_testing/sj_results/star_results.bam.junction.bed') as file:\n",
     "    for line in file:\n",
     "        line = line.split('\\t')\n",
     "        try:\n",
@@ -95,35 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a6ca4cc5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "887\n"
-     ]
-    }
-   ],
-   "source": [
-    "# input was a .sam file from HISAT2\n",
-    "count = 0\n",
-    "with open('testing/Subread_testing/sj_results/subjunc.hisat2.bam.junction.bed') as file:\n",
-    "    for line in file:\n",
-    "        line = line.split('\\t')\n",
-    "        try:\n",
-    "            count_int = int(line[4])\n",
-    "        except IndexError: continue\n",
-    "        count += count_int\n",
-    "print(count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "2ea42a4f",
+   "execution_count": 16,
+   "id": "3c4ea2e2",
    "metadata": {},
    "outputs": [
     {
@@ -135,9 +164,9 @@
     }
    ],
    "source": [
-    "# input was a .bam file from subjunc (subread)\n",
+    "# input was a .sam file from HISAT2\n",
     "count = 0\n",
-    "with open('testing/Subread_testing/sj_results/subjunc.subread.bam.junction.bed') as file:\n",
+    "with open('testing/Subread_testing/sj_results/hisat2_results.bam.junction.bed') as file:\n",
     "    for line in file:\n",
     "        line = line.split('\\t')\n",
     "        try:\n",
@@ -149,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "a7e4fb9a",
    "metadata": {},
    "outputs": [
@@ -163,7 +192,7 @@
    ],
    "source": [
     "count = 0\n",
-    "with open('testing/STAR_testing/results/STAR.82.SJ.out.tab') as file:\n",
+    "with open('testing/STAR_testing/results/STAR.SJ.out.tab') as file:\n",
     "    for line in file:\n",
     "        line = line.split('\\t')\n",
     "        count_str = line[8].rstrip()\n",
@@ -175,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9910c5b6",
+   "id": "2bfa84ae",
    "metadata": {},
    "outputs": [],
    "source": []
