--- a/mrnaseq_example/count.ipynb
+++ b/mrnaseq_example/count.ipynb
@@ -165,6 +165,7 @@
    ],
    "source": [
     "# input was a .sam file from HISAT2\n",
+    "# what is the splice alignment overhang?\n",
     "count = 0\n",
     "with open('testing/Subread_testing/sj_results/hisat2_results.bam.junction.bed') as file:\n",
     "    for line in file:\n",
@@ -203,8 +204,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2bfa84ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1846\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count only rows with canonical splice site\n",
+    "count = 0\n",
+    "with open('testing/STAR_testing/results/STAR.SJ.out.tab') as file:\n",
+    "    for line in file:\n",
+    "        line = line.split('\\t')\n",
+    "        count_str = line[4].rstrip()\n",
+    "        count_int = int(count_str)\n",
+    "        if count_int == 1:\n",
+    "            reads_str = line[8].rstrip()\n",
+    "            reads_int = int(reads_str)\n",
+    "            count += reads_int\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc24f13a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -212,7 +242,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc24f13a",
+   "id": "c84014fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea55af2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b923e451",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d5ff0bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37e1d81b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "875dc688",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1115734f",
    "metadata": {},
    "outputs": [],
    "source": []
