--- a/curve_fitting.ipynb
+++ b/curve_fitting.ipynb
@@ -18,6 +18,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "d979166c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import modelib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1c1f6bf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 5, 7, 10, 6, 10, 14, 5, 6, 4, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "fp = 'small_ints.txt'\n",
+    "print(modelib.get_intbins(fp)[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c2504b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "273ad804",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "604107cd",
    "metadata": {},
