--- a/splicing_paper.qmd
+++ b/splicing_paper.qmd
@@ -4,19 +4,13 @@ format: html
 editor: visual
 ---
 
-Describing the APC algorithm
-Position weight matrix
-The quality of donor and acceptor sites are evaluated using a position weight matrix (PWM). PWMs that cover the length of a spcific motif give insight into the prevalence of each nucleotide base at a given position.
+Describing the APC algorithm Position weight matrix The quality of donor and acceptor sites are evaluated using a position weight matrix (PWM). PWMs that cover the length of a spcific motif give insight into the prevalence of each nucleotide base at a given position.
 
-https://www.sciencedirect.com/topics/medicine-and-dentistry/position-weight-matrix
-According to this, Position Specific Scoring Matrix is the same as a PWM.
+https://www.sciencedirect.com/topics/medicine-and-dentistry/position-weight-matrix According to this, Position Specific Scoring Matrix is the same as a PWM.
 
 Why do we used 5 bases for donor, 6 for acceptor?
 
-Papers in support of PWM:
-Methods to define and locate patterns of motifs in sequences, Rodger Staden, 1988
-Identification of sequence pattersn, motifs and domains, Michael Gribskov, 2019, Encyclopedia of bioinformatics and computational biology
-
+Papers in support of PWM: Methods to define and locate patterns of motifs in sequences, Rodger Staden, 1988 Identification of sequence pattersn, motifs and domains, Michael Gribskov, 2019, Encyclopedia of bioinformatics and computational biology
 
 ```{r}
 library(reticulate)
@@ -28,6 +22,9 @@ myenvs=conda_list()
 use_condaenv('Renv', required = TRUE)
 ```
 
+```{r}
+library("dplyr")
+```
 
 ```{python}
 # need to load conda environment first
@@ -38,8 +35,7 @@ import matplotlib.pyplot as plt
 import logomaker
 ```
 
-logomaker should allow me to import our pwm instead of calculating the values itself
-https://logomaker.readthedocs.io/en/latest/examples.html#splice-site-probability-logo
+logomaker should allow me to import our pwm instead of calculating the values itself https://logomaker.readthedocs.io/en/latest/examples.html#splice-site-probability-logo
 
 to run python code that is more than one line, need to run the top line first and then the second one.
 
@@ -62,7 +58,9 @@ crp_logo.ax.xaxis.set_tick_params(pad=-1)
 # logomaker is creating a plt object? but not explicitly named
 plt.show()
 ```
+
 # will probably need to reformat things into csvs for R
+
 ```{r}
 nuc <- c("A", "C", "G", "T")
 p1 <- c(0, 0, 1, 0)
@@ -71,22 +69,19 @@ p3 <- c(0.6, 0, 0.2, 0.2)
 p4 <- c(0.7, 0, 0.1, 0.2)
 p5 <- c(0.1, 0, 0.8, 0.1)
 
-pwm <- data.frame(p1, p2)
+pwm <- data.frame(p1, p2, p3, p4, p5) %>% 
+  t() %>% 
+  tibble::as_tibble() %>% 
+  as.data.frame() %>% 
+  setNames(nuc) 
+ 
+
 ```
 
+```{python}
+test_logo = logomaker.Logo(r.pwm, shade_below=.5,
+fade_below=.5)
 
+plt.show()
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```
