--- a/splicing_paper.qmd
+++ b/splicing_paper.qmd
@@ -85,3 +85,13 @@ fade_below=.5)
 plt.show()
 
 ```
+
+How is the intron frequency calculated?
+See modelbuilder line 78
+len(introns) / exon sum
+Total number of introns over total number of exon sequences
+Example with actual numbers:
+1570 introns in the smallgenes dataset
+489418 total number of exon bases
+inf = 1570/489418 = 0.00320...
+
