--- a/splicing_paper.qmd
+++ b/splicing_paper.qmd
@@ -14,12 +14,19 @@ Papers in support of PWM: Methods to define and locate patterns of motifs in seq
 
 ```{r}
 library(reticulate)
+```
+
+```{r}
+library(reticulate)
 
 myenvs=conda_list()
-# myenvs
+myenvs
 
-# need to select python interpreter in tools>global options
-use_condaenv('Renv', required = TRUE)
+# need to install python in the environment
+# don't add python from tools > global options
+# it conflicts
+use_condaenv("Renv")
+# can only be run once?
 ```
 
 ```{r}
@@ -38,6 +45,12 @@ import logomaker
 logomaker should allow me to import our pwm instead of calculating the values itself https://logomaker.readthedocs.io/en/latest/examples.html#splice-site-probability-logo
 
 to run python code that is more than one line, need to run the top line first and then the second one.
+
+```{python}
+crp_df = logomaker.get_example_matrix(
+  'crp_energy_matrix', print_description=False)
+crp_df
+```
 
 ```{python}
 crp_df = logomaker.get_example_matrix(
@@ -86,12 +99,29 @@ plt.show()
 
 ```
 
-How is the intron frequency calculated?
-See modelbuilder line 78
-len(introns) / exon sum
-Total number of introns over total number of exon sequences
-Example with actual numbers:
-1570 introns in the smallgenes dataset
-489418 total number of exon bases
-inf = 1570/489418 = 0.00320...
+How is the intron frequency calculated? See modelbuilder line 78 len(introns) / exon sum Total number of introns over total number of exon sequences Example with actual numbers: 1570 introns in the smallgenes dataset 489418 total number of exon bases inf = 1570/489418 = 0.00320...
+
+Length model
+
+The length of an intron
+
+Create histogram of distances
+```{r}
+mdists <- read.csv("../isoforms/APCanalysis/nmd.res")
+
+library(ggplot2)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
 
